<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseBackground"
    android:paddingBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_signup_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:drawablePadding="12dp"
                android:gravity="center|right"
                android:hint="@string/signup_user_name_hint"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/regular" />

            <EditText
                android:id="@+id/edt_signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:gravity="center|right"
                android:hint="@string/signup_password_hint"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/regular" />

            <EditText
                android:id="@+id/edt_signup_rePassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:gravity="center|right"
                android:hint="@string/signup_repassword_hint"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/regular" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup_send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_button"
            android:text="@string/signup_send"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/regular" />

    </RelativeLayout>


</RelativeLayout>