<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseBackground"
    tools:context=".Module.HomeActivity">

    <ProgressBar
        android:id="@+id/progressBar_home"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_home_noMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:includeFontPadding="false"
        android:paddingBottom="6dp"
        android:text="@string/no_message"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/bold_medium" />

    <Button
        android:id="@+id/btn_home_tryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_home_noMessage"
        android:layout_centerHorizontal="true"
        android:layoutDirection="rtl"
        android:background="@android:color/transparent"
        android:text="@string/home_try_again"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/phianthropist_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="75dp" />

    <Button
        android:id="@+id/btn_home_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_button"
        android:layoutDirection="rtl"
        android:text="@string/home_philanthropist_btn_add"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="@dimen/regular" />

</RelativeLayout>